# learn

./: .gitignore  LICENSE  README.md
go/: BREW_REPORT.md  analyze_brew.py
go/.sisyphus/: boulder.json
go/.sisyphus/drafts/: brew-analysis.md
go/.sisyphus/plans/: brew-analysis.md
go/complex-num/: main.go
go/errors/: main.go
go/goroutines/: main.go
go/interfaces/: main.go
go/maps/: main.go
go/slices/: main.go
go/structs/: main.go
go/variables/: main.go
go/vortex-gate/: LICENSE  README.md  go.mod
go/world_hello/: main.go
nextjs/: package-lock.json
nextjs/src/app/: globals.css  layout.tsx  page.tsx
rust/.sisyphus/drafts/: mini-lsm.md  web-server-api.md
rust/.sisyphus/plans/: mini-lsm.md  mini-redis.md  web-server-api.md
rust/mini-lsm/: Cargo.toml
rust/mini-lsm/data/: mem.wal
rust/mini-lsm/docs/plans/: 2026-02-04-block-design.md  2026-02-04-sstable-builder-design.md  2026-02-04-sstable-builder.md
rust/mini-lsm/src/: block.rs  bloom.rs  compact.rs  error.rs  lib.rs  lsm_storage.rs  memtable.rs  sstable.rs  wal.rs
rust/mini-redis/: Cargo.toml  README.md
rust/mini-redis/src/: command.rs  connection.rs  db.rs  error.rs  frame.rs  lib.rs  parse.rs
rust/mini-redis/src/server/: mod.rs
rust/mini-redis/tests/: integration.rs
rust/web-server/: Cargo.toml
rust/web-server/migrations/: 20240101_000001_create_todos.sql
rust/web-server/src/: db.rs  error.rs  main.rs
rust/web-server/src/models/: todo.rs
rust/web-server/src/routes/: health.rs  todos.rs
rust/web-server/tests/: api_tests.rs
tailwind/: index.html
(+13 files in other folders)
