[package]
name = "mini-lsm"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
crossbeam-skiplist = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.3"
anyhow = "1.0"
farmhash = "1.0"
lru = "0.12"
ouroboros = "0.18"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "memtable"
harness = false

[[bench]]
name = "sstable"
harness = false
