[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-skiplist = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
